Add support for Java 25 LTS