@@ -17,6 +17,11 @@ gitProperties {
     dotGitDirectory = rootProject.file(".git")
 }
 
+tasks.shadowJar {
+    manifest.attributes["Enable-Native-Access"] = "ALL-UNNAMED"
+    manifest.attributes["Add-Opens"] = "java.base/jdk.internal.misc=ALL-UNNAMED java.base/java.nio=ALL-UNNAMED"
+}
+
 dependencies {
     val authLibPkg = findProject(":AuthLibPackage")
     if (authLibPkg == null) {
@@ -36,6 +41,7 @@ dependencies {
     api(libs.jackson.datatype.jdk8)
     api(libs.jline.reader)
     api(libs.jline.terminal)
+    api(libs.jline.terminal.ffm)
     api(libs.jopt)
     api(libs.jwt)
     api(libs.lmax.disruptor)
